[package]
name = "stage-control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "stage_control"
crate-type = ["cdylib"]

[dependencies]
image = "0.25.4"
pyo3 = "0.22.0"

[dependencies.nokhwa]
version = "0.10.5"
features = ["input-native", "output-wgpu", "output-threaded"]

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3


